fix: set text-align center to sample pages

--- a/src/app/introduction/introduction.component.css
+++ b/src/app/introduction/introduction.component.css
@@ -1,3 +1,5 @@
 p {
   color: #BDBDBD;
+
+  text-align: center;
 }
