--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,3 +1,4 @@
 p {
   color: #BDBDBD;
+  text-align: center;
 }
