--- a/src/app/top/top.component.css
+++ b/src/app/top/top.component.css
@@ -1,10 +1,10 @@
-@media screen and (max-width: 700px){
-
 .top-cover-section{
-  /* width: 100%;
-  height: 60%; */
-
+  width: 100%;
+  /* height: 60%; */
+  position: relative;
 }
+
+@media screen and (max-width: 700px){
 
 img{
   /* position: relative; */
